# mixtec-fst-epitran.rs

./: Cargo.toml
mixtec_fst/: Cargo.toml  chars.txt
mixtec_fst/rules/: all.txt  from_14.txt  from_4.txt  hab.txt  special.txt  to_linear.txt  to_linear_1.txt  to_linear_2.txt  to_linear_3.txt  to_linear_4.txt  to_linear_base.txt
mixtec_fst/rules/min/: compl_11.txt  compl_1X.txt  detr.txt  hab_14.txt  hab_314.txt  hab_34-24.txt  hab_34-34.txt  hab_34-4.txt  hab_i4-.txt  neg_1.txt  neg_3-24.txt  neg_3-34.txt  neg_3-4.txt  neg_31.txt  neg_4.txt  neg_alt.txt
mixtec_fst/src/: main.rs  rewrite.rs
mixtec_fst/tests/: i4in4.csv
