[package]
name = "mixtec_fst"
version = "0.1.0"
edition = "2024"

[dependencies]
parserule = { path = "../parserule" }
nom = "7.1.3"
rustfst.workspace = true
anyhow.workspace = true
itertools = "0.14.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "^4.4", features = ["derive"] }
colored = "3.0.0"